--- a/src/components/SidePanel.css
+++ b/src/components/SidePanel.css
@@ -1,6 +1,24 @@
-.sidepanel {
-    background-color: green;
+/* .sidepanel { */
     /* display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     grid-gap: 20px */
+/* } */
+.sidepanel-main {
+    background-color: #FFCFD2;
+    display: flex;
+    flex-direction: column;
+
+}
+
+.BoardForm {
+    display: flex;
+    flex-direction: column;
+}
+
+#CardForm {
+
+}
+
+#color-buttons{
+
 }
