--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,9 @@
-body {
+/* body {
     background-image: url("https://c1.wallpaperflare.com/preview/907/581/284/backdrop-background-blank-board.jpg");
-}
+} */
 
 /* Main App Container */
-.App {
+/* .App {
     display: grid; 
     grid-auto-columns: 1fr; 
     grid-template-columns: 25% 31.5fr 21.5fr 22fr;  
@@ -28,10 +28,10 @@ body {
     width: 200px
 }
 
-.board { grid-area: board; }
+.board { grid-area: board; } */
 
 /* SidePanel Container*/
-.sidepanel-main {
+/* .sidepanel-main {
     background-color: #FFCFD2;
     display: flex;
     flex-direction: column;
@@ -62,8 +62,8 @@ body {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-}
-
+} */
+/* 
 .card-footer {
     display: flex;
     align-items: center;
@@ -78,17 +78,17 @@ body {
     display: flex;
     flex-direction: column;
 
-}
+} */
 
 /* Creating New Card */
-.create-card { 
+/* .create-card { 
     display: flex;
     flex-direction: column;
     align-items: center;
 
-}
+} */
 
-textarea {
+/* textarea {
     background-color: #F3EC46;
     border: none;
     resize: none;
@@ -96,13 +96,13 @@ textarea {
 
 textarea:focus {
     outline:none;
-}
+} */
 
 /* PickingColor Squares */
 
 
 /* All Buttons */
-button {
+/* button {
     background-color: #B9FBC0;
     border: none;
     font-weight: bold;
@@ -113,6 +113,6 @@ button:hover {
     color: white;
     font: Helvetica;
     font-weight: bold;
-}
+} */
 
 
