--- a/src/index.css
+++ b/src/index.css
@@ -8,12 +8,12 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',monospace;
 }
 
 body {
   background-image: url("https://c1.wallpaperflare.com/preview/907/581/284/backdrop-background-blank-board.jpg");
+  color: #006d77
 }
 
 /* Main App Container */
@@ -24,8 +24,8 @@ body {
   grid-template-rows: 10% 90%; 
   gap: 20px; 
   grid-template-areas: 
-      "App-header App-header App-header App-header"
-      "sidepanel board board board"; 
+    "App-header App-header App-header App-header"
+    "sidepanel board board board"; 
   padding-left: 20px
 }
 
@@ -89,24 +89,21 @@ body {
 }
 
 .board-selector { 
-  grid-area: board-selector; 
-  display: flex;
+  grid-area: board-selector;
+  display: grid;
+  grid-gap: 10px;
+  /* display: flex;
   flex-direction: column;
   align-items: center;
   padding-bottom: 10px;
   padding-left: 10px;
-  padding-right: 10px;
+  padding-right: 10px; */
 }
 
 .create-new-board { 
   grid-area: create-new-board;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  padding-bottom: 10px;
-  padding-left: 10px;
-  padding-right: 10px;
-  padding-top: 10px;
+  display: grid;
+  grid-gap: 10px;
 }
 
 /* Creating New Card */
@@ -121,15 +118,43 @@ body {
   padding-top: 10px;
 }
 
+/* Card Colors */
 .card-color {
   display: flex;
   flex-direction: column;
+  align-items: center;
   padding-bottom: 10px;
   padding-left: 10px;
   padding-right: 10px;
   padding-top: 10px;
 }
 
+/* Card Color Options - displayed on buttons */
+button#red {
+  background-color: #ffadad;
+}
+
+button#orange {
+  background-color: #ffd6a5;
+}
+
+button#yellow {
+  background-color: #fdffb6;
+}
+
+button#green {
+  background-color: #caffbf;
+}
+
+button#blue {
+  background-color: #9bf6ff;
+}
+
+button#purple {
+  background-color: #bdb2ff;
+}
+
+/* Text Area for CreateCard */
 textarea {
   background-color: #fffcab;
   border: none;
@@ -157,16 +182,16 @@ textarea:focus {
   appearance: none;
 }
 
+select:hover {
+  cursor: pointer;
+}
+
 /* All Buttons */
 button {
-  /* background-color: #B9FBC0;
-  border-radius: 3px;
-  border: none; */
-  border: none;
-	outline: none;
 	padding: 5px 10px;
 	border-radius: 50px;
-	color: #333;
+	color: #006d77;
+  border: #006d77 solid;
 	background: #fff;
 	margin-bottom: 10px;
 	box-shadow: 0 3px 20px 0 #0000003b;
@@ -174,20 +199,17 @@ button {
 
 button:hover {
   background-color: #7B2CBF;
+  cursor: pointer;
   color: white;
   font: Helvetica;
 }
 
 /* Submit Board Button (input) */
 .submit-board {
-  /* background-color: #B9FBC0;
-  border-radius: 3px;
-  border: none; */
-  border: none;
-	outline: none;
+  color: #006d77;
+  border: #006d77 solid;
 	padding: 5px 10px;
 	border-radius: 50px;
-	color: #333;
 	background: #fff;
 	margin-bottom: 10px;
 	box-shadow: 0 3px 20px 0 #0000003b;
@@ -195,6 +217,7 @@ button:hover {
 
 .submit-board:hover {
   background-color: #7B2CBF;
+  cursor: pointer;
   color: white;
   font: Helvetica;
 }
