--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+body {
+  margin: 0;
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+    sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',monospace;
 }
@@ -11,12 +20,12 @@ body {
 .App {
   display: grid; 
   grid-auto-columns: 1fr; 
-  grid-template-columns: 25% 31.5fr 21.5fr 22fr;  
-  grid-template-rows: 20% 80%; 
+  grid-template-columns: 35% 65%; 
+  grid-template-rows: 15% 85%; 
   gap: 20px; 
   grid-template-areas: 
-    "App-header App-header App-header App-header"
-    "sidepanel board board board"; 
+    "App-header App-header"
+    "sidepanel board"; 
   padding-left: 20px
 }
 
@@ -26,7 +35,7 @@ body {
   text-align: center;
   line-height: 10px;
 	font-size: 25px;
-  margin-bottom: 50px;
+  padding-top: 20px;
 }
 
 .sidepanel { 
@@ -39,13 +48,13 @@ body {
 
 /* SidePanel Container*/
 .sidepanel-main {
-  background: #ffdede;
+  /* background: #ffdede; */
+  gap: 15px;
   border-radius: 10px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding-right: 10px;
 }
 
 .board-main {
@@ -65,18 +74,42 @@ body {
   background-color: #fffcab;
   overflow-wrap: break-word;
   border-radius: 10px;
-	padding: 1rem;
+  /* box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24); */
+  left:0;
+  bottom:0;
+  z-index:2;
+  transform:skewX(.5deg);
+  padding: 1rem;
 	min-height: 170px;
   max-height: 220px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
 	white-space: pre-wrap;
+  border-radius:0 0 0 20px/45px;
+  box-shadow:
+    inset 0 -40px 40px rgba(0, 0, 0, 0.105),
+    inset 0 25px 10px rgba(0,0,0,0.105),
+    0 5px 6px 5px rgba(0,0,0,0.105);
 }
 
 /* Creating New Card */
 .card-main.create-card { 
   background-color: #d8f3dc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.create-card {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  width: 250px;
+  background-color: rgb(237, 213, 237);
+  margin: auto;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  padding: 10px;
 }
 
 .card-footer {
@@ -88,16 +121,23 @@ body {
 
 .board-selector { 
   grid-area: board-selector;
+  background-color: rgb(237, 213, 237);
   display: grid;
   grid-gap: 10px;
+  text-align: center;
+  width: 250px;
+  margin: auto;
+  box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
+  padding: 10px;
 }
 
 /* Create New Board */
 .create-new-board { 
   grid-area: create-new-board;
   text-align: center;
+  align-items: center;
   width: 250px;
-  background-color: white;
+  background-color: rgb(237, 213, 237);
   margin: auto;
   box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
   padding: 10px;
@@ -147,7 +187,7 @@ input {
 }
 
 /* Card Color Options - displayed on buttons */
-button#red, .color-change-red{
+/* button#red, .color-change-red{
   background-color: #ffadad;
 }
 
@@ -169,7 +209,7 @@ button#blue, .color-change-blue{
 
 button#purple, .color-change-purple {
   background-color: #dee2ff;
-}
+} */
 
 /* Text Area for CreateCard */
 textarea {
@@ -179,7 +219,7 @@ textarea {
   border: none;
   resize: none;
   overflow: auto;
-  border-radius: 10px;
+  margin-bottom: 10px;
 	padding: 1rem;
 	min-height: 170px;
   max-height: 220px;
@@ -187,6 +227,15 @@ textarea {
 	flex-direction: column;
 	justify-content: space-between;
 	white-space: pre-wrap;
+  left:0;
+  bottom:0;
+  z-index:2;
+  transform:skewX(.5deg);
+  border-radius:0 0 0 20px/45px;
+  box-shadow:
+    inset 0 -40px 40px rgba(0, 0, 0, 0.105),
+    inset 0 25px 10px rgba(0,0,0,0.105),
+    0 5px 6px 5px rgba(0,0,0,0.105);
   
 }
 
@@ -215,6 +264,7 @@ button {
 	padding: 5px 10px;
 	border-radius: 50px;
 	color: #006d77;
+  font-weight: bold;
   border: #006d77 solid;
 	background: #fff;
 	margin-bottom: 10px;
@@ -226,6 +276,12 @@ button:hover {
   cursor: pointer;
   color: white;
   font: Helvetica;
+}
+
+button.delete-board:hover {
+  background-color: #ffa4a4;
+  color: whitesmoke;
+  font-weight: bold;
 }
 
 .delete-icon {
