small css update

--- a/src/index.css
+++ b/src/index.css
@@ -21,12 +21,11 @@ body {
   display: grid; 
   grid-auto-columns: 1fr; 
   grid-template-columns: 35% 65%; 
-  grid-template-rows: 15% 85%; 
-  gap: 20px; 
+  grid-template-rows: 10% 95%; 
+  gap: 10px; 
   grid-template-areas: 
     "App-header App-header"
     "sidepanel board"; 
-  padding-left: 20px
 }
 
 .App-header { 
@@ -40,8 +39,6 @@ body {
 
 .sidepanel { 
   grid-area: sidepanel;
-  min-height: 250px;
-  width: 200px;
 }
 
 .board { grid-area: board; }
@@ -49,7 +46,7 @@ body {
 /* SidePanel Container*/
 .sidepanel-main {
   /* background: #ffdede; */
-  gap: 15px;
+  /* gap: 15px; */
   border-radius: 10px;
   display: flex;
   flex-direction: column;
