--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ body {
   display: grid; 
   grid-auto-columns: 1fr; 
   grid-template-columns: 35% 65%; 
-  grid-template-rows: 10% 95%; 
+  grid-template-rows: 15% 90%; 
   gap: 10px; 
   grid-template-areas: 
     "App-header App-header"
@@ -33,8 +33,11 @@ body {
   display: block;
   text-align: center;
   line-height: 10px;
-	font-size: 25px;
-  padding-top: 20px;
+	font-size: 35px;
+  text-shadow: 3px 3px #c7f9cc;
+  font-weight: bold;
+  font-style: italic;
+  text-transform: uppercase;
 }
 
 .sidepanel { 
